# Sealium

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sealium.toml.example  security-audit-report.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  client-guide.md  configuration.md  hardware-binding.md  index.md  mechanism.md  protocol.md  security.md  security_communication_mechanism_zh.md  server-guide.md  troubleshooting.md
docs/security/communication/: mechanism.md
src/docs/: mechanism.md  tree.txt
src/sealium/: __init__.py
src/sealium/client/: __init__.py  activator.py  key_manager.py
src/sealium/common/: constants.py  crypto.py  exceptions.py  fingerprint.py  machine_code.py  models.py  time_source.py  utils.py
src/sealium/common/hardware/: __init__.py  cross_validate.py  native_surfaces.py  types.py  wmi_surfaces.py
src/sealium/scripts/: __init__.py  generate_activation_codes.py  generate_keys.py
src/sealium/server/: __init__.py  activation.py  activation_service.py  app.py  client_identity.py  config.py  config_cli.py  crypto_transport.py  database.py  deps.py  rate_limit.py  replay_guard.py  run.py
src/sealium/server/routes/: __init__.py  activation.py
src/sealium/utils/crypto/: __init__.py  asymmetric.py  semmetric.py
src/sealium/utils/encrypt/: asymmetric.py
src/sealium/utils/fetch/: __init__.py  hardwaredata.py  hardwaredata_abc.py  (+1 more)
src/tests/: keygen.py  test_activation_flow.py  test_activation_plus.py  testclient.py
src/tests/common/: machinecodetest.py  test_utils.py
src/tests/usage/: usage.py
tests/: conftest.py  test_ci_workflow.py
tests/client/: test_activator.py
tests/crypto/: test_asymmetric_encryption.py  test_symmetric_encryption.py
tests/e2e/: test_full_flow.py
tests/fetch/: test_hardwaredata.py
tests/randomtest/: pythonv.py  windowspi.py
tests/server/: test_activation_api.py  test_app.py  test_proxy_rate_limit.py
tests/unit/: test_activation_service.py  test_client_identity.py  test_config.py  test_config_cli.py  test_crypto.py  test_crypto_transport.py  test_database.py  test_fingerprint.py  test_generate_activation_codes.py  test_key_manager.py  test_machine_code.py  test_models.py  test_rate_limit.py  test_replay_guard.py  test_time_source.py
tests/unit/hardware/: test_cross_validate.py  test_native_surfaces.py
