[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sealium"
version = "1.1.0"
description = "Secure license key generation, software activation, and hardware binding."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Kevin Hsu" }]
requires-python = ">=3.13"
dependencies = [
    "cryptography",
    "requests",
    "fastapi",
    "uvicorn",
    "wmi; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
