[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sealium"
version = "1.5.1"
description = "Secure license key generation, software activation, and hardware binding."
readme = "README.md"
license = "MIT"
authors = [{ name = "Kevin Hsu" }]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42",
    "requests>=2.28",
    "fastapi>=0.100",
    "pydantic-settings>=2.0",
    "tomli; python_version < '3.11'",
    "uvicorn>=0.20",
    "wmi; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx",
    "pip-audit>=2.7",
]
packaging = [
    "nuitka>=2",  # 客户端打包成原生可执行（非运行时/测试依赖）
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
